--- a/src/main/resources/templates/community/review-board.html
+++ b/src/main/resources/templates/community/review-board.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 활동 후기 게시판</title>
     <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/community/review-board.css">
     <link rel="stylesheet" href="/css/community/free-board.css">
 </head>
@@ -399,7 +400,6 @@
         </main>
     </div>
 
-    <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
 
 
     <!-- 푸터 -->
