--- a/src/main/resources/templates/community/review-create.html
+++ b/src/main/resources/templates/community/review-create.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>활동 후기 작성하기</title>
     <link rel="stylesheet" href="/css/community/review-create.css">
+    <link rel="stylesheet" href="/css/main/header.css">
+    <link rel="stylesheet" href="/css/main/footer.css">
     <link rel="stylesheet" href="/js/community/free-create.js">
     <link rel="stylesheet" href="/css/font/font.css">
 </head>
