--- a/src/main/resources/templates/community/review-detail.html
+++ b/src/main/resources/templates/community/review-detail.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>심봉사 | 활동 후기 상세페이지</title>
     <link rel="stylesheet" href="/css/font/font.css">
+    <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/community/free-detail.css">
 </head>
 <body>
@@ -444,7 +445,6 @@
             </footer>
         </div>
     </div>
-    <footer th:insert="~{main/footer.html :: mainFooter}"></footer>
      <!--  -->
      <!-- 댓글 삭제 모달창 -->
      <div>
