--- a/src/main/resources/static/css/community/review-detail.css
+++ b/src/main/resources/static/css/community/review-detail.css
@@ -26,16 +26,7 @@ div {
     --tw-skew-y: 0;
     --tw-scale-x: 1;
     --tw-scale-y: 1;
-    --tw-pan-x: ;
-    --tw-pan-y: ;
-    --tw-pinch-zoom: ;
     --tw-scroll-snap-strictness: proximity;
-    --tw-ordinal: ;
-    --tw-slashed-zero: ;
-    --tw-numeric-figure: ;
-    --tw-numeric-spacing: ;
-    --tw-numeric-fraction: ;
-    --tw-ring-inset: ;
     --tw-ring-offset-width: 0px;
     --tw-ring-offset-color: #fff;
     --tw-ring-color: rgba(59,130,246,.5);
@@ -43,24 +34,6 @@ div {
     --tw-ring-shadow: 0 0 #0000;
     --tw-shadow: 0 0 #0000;
     --tw-shadow-colored: 0 0 #0000;
-    --tw-blur: ;
-    --tw-brightness: ;
-    --tw-contrast: ;
-    --tw-grayscale: ;
-    --tw-hue-rotate: ;
-    --tw-invert: ;
-    --tw-saturate: ;
-    --tw-sepia: ;
-    --tw-drop-shadow: ;
-    --tw-backdrop-blur: ;
-    --tw-backdrop-brightness: ;
-    --tw-backdrop-contrast: ;
-    --tw-backdrop-grayscale: ;
-    --tw-backdrop-hue-rotate: ;
-    --tw-backdrop-invert: ;
-    --tw-backdrop-opacity: ;
-    --tw-backdrop-saturate: ;
-    --tw-backdrop-sepia: ;
     box-sizing: border-box;
     border: 0 solid #e5e7eb;
 }
@@ -773,7 +746,7 @@ ul{
     display: block;
 }
 .comment-box-span:focus {
-    border-color: #742ddd;
+    border-color: rgb(255 152 139 / 83%);
 }
 .more{
     justify-content: center;
@@ -803,8 +776,8 @@ ul{
 .more-svg{
     height: 16px;
     margin-left: 4px;
-    color: #5b44ea;
-    fill: #5b44ea;
+    color: rgba(229, 104, 89, 0.83);
+    fill: rgba(229, 104, 89, 0.83);
     display: block;
 }
 .footer{
@@ -876,8 +849,8 @@ ul{
 .comment-svg{
     width: 16px;
     height: 16px;
-    color: #5b44ea;
-    fill: #5b44ea;
+    color: rgba(229, 104, 89, 0.83);
+    fill: rgba(229, 104, 89, 0.83);
     display: block;
 }
 .more :hover{
