봉사 상세보기 이미지 경로수정

--- a/src/main/resources/templates/volunteer-work/work-detail.html
+++ b/src/main/resources/templates/volunteer-work/work-detail.html
@@ -151,7 +151,7 @@
                              [수요처 지도]
                              <!-- <a href="javascript:;" id="skipBtn" style="float: right;">지도 건너뛰기</a> -->
                              <div>
-                                 <img src="/static/image/map.png" alt="kakao">
+                                 <img src="/image/map.png" alt="kakao">
                              </div>
 
 
