--- a/src/main/resources/static/css/mypage/rice-list.css
+++ b/src/main/resources/static/css/mypage/rice-list.css
@@ -26,3 +26,114 @@ tr:last-child td {
 th:last-child, td:last-child {
     border-right: 0;
 }
+
+
+.page-wrap {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    margin: 20px auto 40px;
+}
+
+.page-ul {
+    display: flex;
+    color: rgb(158, 158, 158);
+    margin: 0px;
+    font-size: 14px !important;
+}
+
+.page-li {
+    list-style: none;
+    margin: 0px 6px;
+    float: none;
+    display: flex;
+    min-width: 22px;
+    height: 25px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    border: 0px;
+    font-weight: bold;
+    -webkit-box-align: center;
+    align-items: center;
+
+    margin: 0px;
+    font-size: 12px;
+    font-weight: normal;
+}
+
+.page-li a {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    white-space: nowrap;
+    color: rgb(158, 158, 158) !important;
+    padding-left: 7px;
+    padding-right: 7px;
+    align-items: flex-end;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: -0.015em;
+}
+
+.page-li-select {
+    margin: 0px 6px;
+    float: none;
+    display: flex;
+    min-width: 22px;
+    height: 25px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    border: 0px;
+    font-weight: bold;
+    -webkit-box-align: center;
+    align-items: center;
+    background-color: rgb(109, 109, 109) !important;
+}
+
+.page-li-select a {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    white-space: nowrap;
+    padding-left: 7px;
+    padding-right: 7px;
+    align-items: flex-end;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: -0.015em;
+    color: rgb(255, 255, 255) !important;
+}
+
+.page-arrow {
+    justify-content: center;
+    cursor: pointer;
+    color: #666;
+    list-style: none;
+    line-height: 28px;
+    text-align: center;
+
+    float: none;
+    display: flex;
+    min-width: 22px;
+    height: 25px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    border: 0px;
+    align-items: center;
+
+    margin: 0px;
+    font-size: 12px;
+    font-weight: normal;
+}
+
+.arrow {
+    height: 15px;
+    display: inline-flex;
+    align-self: center;
+}
