관리자 작업 중

--- a/src/main/resources/templates/admin/sponsorship-request.html
+++ b/src/main/resources/templates/admin/sponsorship-request.html
@@ -127,8 +127,8 @@
                     <button class="listbox-selecter">검색조건 선택</button>
                     <ul class="listbox displayNone" id="listbox">
                       <li><button class="list">전체</button></li>
-                      <li><button class="list">검색조건1</button></li>
-                      <li><button class="list">검색조건2</button></li>
+                      <li><button class="list">승인/대기</button></li>
+                      <li><button class="list">이메일</button></li>
                     </ul>
                     <input type="text" name="searchType" style="display: none" value="all" />
                   </div>
