--- a/src/main/resources/templates/admin/activity-review-board.html
+++ b/src/main/resources/templates/admin/activity-review-board.html
@@ -82,8 +82,8 @@
                     <button class="listbox-selecter">검색조건 선택</button>
                     <ul class="listbox displayNone" id="listbox">
                       <li><button class="list">전체</button></li>
-                      <li><button class="list">검색조건1</button></li>
-                      <li><button class="list">검색조건2</button></li>
+                      <li><button class="list">제목</button></li>
+                      <li><button class="list">이메일</button></li>
                     </ul>
                     <input type="text" name="searchType" style="display: none" value="all" />
                   </div>
