--- a/src/main/resources/static/css/admin/default.css
+++ b/src/main/resources/static/css/admin/default.css
@@ -171,6 +171,7 @@ section.modal-stage {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 1050;
 }
 section.volunteer-modal {
   position: absolute;
