충돌 해결하러 가자...

--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -372,47 +372,77 @@
                 </div>
                 <div class="collect-side">
                     <div style="position: fixed;">
+<!--                        <div class="section-status">-->
+<!--                            <div class="graph-wrap">-->
+<!--                                <div class="graph-status">-->
+<!--                                    <span class="per">-->
+<!--                                        <strong class="num">44</strong>-->
+<!--                                        %-->
+<!--                                    </span>-->
+<!--                                </div>-->
+<!--                                <div class="graph-bar">-->
+<!--                                    <span style="width: 44%;"></span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="term-area">-->
+<!--                                <p>-->
+<!--                                    <strong>-->
+<!--                                        -->
+<!--                                    2023.03.30 ~-->
+<!--                                    2023.06.28-->
+<!--                                -->
+<!--                                    </strong>-->
+<!--                                    <span>까지</span>-->
+<!--                                </p>-->
+<!--                                <div>-->
+<!--                                    <span class="d-day">-->
+<!--                                        D-->
+<!--                                        <em class="bar">-</em>-->
+<!--                                        63-->
+<!--                                    </span>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="num-area">-->
+<!--                                <p class="status-num">-->
+<!--                                    <strong>4,365,700</strong>-->
+<!--                                    <span>원</span>-->
+<!--                                </p>-->
+<!--                                <p class="detail-num second-version">-->
+<!--                                    <strong>-->
+<!--                                        <span>9,900,000</span>-->
+<!--                                        <em>원 목표</em>-->
+<!--                                    </strong>-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </div>-->
                         <div class="section-status">
                             <div class="graph-wrap">
                                 <div class="graph-status">
                                     <span class="per">
-                                        <strong class="num">44</strong>
-                                        %
-                                    </span>
+                                        <strong class="num">367</strong>개</span>
                                 </div>
-                                <div class="graph-bar">
-                                    <span style="width: 44%;"></span>
-                                </div>
+
                             </div>
                             <div class="term-area">
                                 <p>
                                     <strong>
-                                        
-                                    2023.03.30 ~
-                                    2023.06.28
-                                
+
+                                        2023.03.30
+
+
                                     </strong>
-                                    <span>까지</span>
+                                    <span>등록</span>
                                 </p>
                                 <div>
-                                    <span class="d-day">
-                                        D
-                                        <em class="bar">-</em>
-                                        63
-                                    </span>
+                                    <span class="d-day">환산금액</span>
                                 </div>
                             </div>
                             <div class="num-area">
                                 <p class="status-num">
-                                    <strong>4,365,700</strong>
+                                    <strong>36700</strong>
                                     <span>원</span>
                                 </p>
-                                <p class="detail-num second-version">
-                                    <strong>
-                                        <span>9,900,000</span>
-                                        <em>원 목표</em>
-                                    </strong>
-                                </p>
+
                             </div>
                         </div>
                         <div class="section-btn">
