--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -14,6 +14,7 @@
 <body class="full">
 <header th:insert="~{main/header.html :: mainHeader}"></header>
 <div th:insert="~{support/support-rice-modal.html :: supportRiceLayout}"></div>
+<div th:insert="~{support/support-rice-result.html :: supportRiceLayoutError}"></div>
 
 <div id="wrap">
         <div id="container">
