--- a/src/main/resources/templates/admin/component/sidebar.html
+++ b/src/main/resources/templates/admin/component/sidebar.html
@@ -34,7 +34,7 @@
       </div>
       <div class="sidebar__menu-nav">
         <!-- 회원관리 -->
-        <a href="javascript:void(0)" class="sidebar__menu">
+        <a th:href="@{/admin/user}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -73,7 +73,7 @@
           </svg>
         </a>
         <!-- 봉사 관리 -->
-        <a href="javascript:void(0)" class="sidebar__menu">
+        <a th:href="@{/admin/volunteer}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg height="64" id="svg8" version="1.1" viewBox="0 0 16.933333 16.933334" width="64"
@@ -124,7 +124,7 @@
 <!--          </svg>-->
 <!--        </a>-->
         <!-- 문의관리 -->
-        <a href="javascript:void(0)" class="sidebar__menu">
+        <a th:href="@{/admin/inquiry}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg style="height: 18px; width: 18px" xmlns="http://www.w3.org/2000/svg"
@@ -149,7 +149,7 @@
           </svg>
         </a>
         <!-- 공지사항 -->
-        <a href="javascript:void(0)" class="sidebar__menu">
+        <a th:href="@{/admin/notice}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Layer_1_1_"
@@ -167,7 +167,7 @@
           </svg>
         </a>
         <!-- 펀딩 관리  -->
-        <a href="javascript:void(0)" class="sidebar__menu">
+        <a th:href="@{/admin/funding}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.33 19.56">
@@ -191,7 +191,7 @@
           </svg>
         </a>
          <!-- 공양미 충전 내역 -->
-         <a href="javascript:void(0)" class="sidebar__menu">
+         <a th:href="@{/admin/payment}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.33 19.56">
@@ -215,7 +215,7 @@
           </svg>
         </a>
          <!-- 공양미 환전 요청 -->
-         <a href="javascript:void(0)" class="sidebar__menu">
+         <a th:href="@{/admin/gongyangmi-refund}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23.33 19.56">
@@ -240,7 +240,7 @@
         </a>
 
          <!-- 후원요청 관리 -->
-         <a href="javascript:void(0)" class="sidebar__menu">
+         <a th:href="@{/admin/sponsorship-request}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg height="100%"
@@ -260,7 +260,7 @@
           </svg>
         </a>
         <!-- 활동 후기 -->
-        <a href="javascript:void(0)" class="sidebar__menu">
+        <a th:href="@{/admin/activity-review-board}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <svg viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
@@ -282,7 +282,7 @@
           </svg>
         </a>
         <!-- 자유게시판 관리 -->
-        <a href="javascript:void(0)" class="sidebar__menu">
+        <a th:href="@{/admin/volunteer-recruitment-board}" class="sidebar__menu">
           <div class="sidebar__menu__name">
             <div>
               <?xml version="1.0" ?><svg data-name="Layer 1" id="Layer_1" viewBox="0 0 512 512"
