--- a/src/main/resources/templates/mypage/my-review.html
+++ b/src/main/resources/templates/mypage/my-review.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>작성한 후기</title>
+    <title>작성한 게시물</title>
     <link rel="stylesheet" href="/css/font/font.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/mypage/mypage-header.css">
