--- a/src/main/resources/templates/join-login/email-login.html
+++ b/src/main/resources/templates/join-login/email-login.html
@@ -43,6 +43,15 @@
                             </div>
                             <div class="email-error">비밀번호를 입력해주세요</div>
                         </div>
+                        <div class="modal-login-addition">
+                            <label for="remember" color="#ffd400" class="modal-keep-login-label">
+                                <span class="modal-keep-login-span">
+                                    <input id="remember" type="checkbox" name="remember-me" class="modal-keep-login">
+                                    <span color="#ffd400" class="modal-checkbox-inner"></span>
+                                    <span class="modal-keep-login-text">로그인 유지</span>
+                                </span>
+                            </label>
+                        </div>
                         <button class="submit-button" type="button">
                             <span>로그인</span>
                         </button>
