--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- 로그인시 -->
-    <div class="full-screen">
+    <!--<div class="full-screen">
         <header id="main-header" th:fragment="mainHeader" class="header-layout">
             <div class="header-wrapper">
                 <div class="header-upper-layout">
@@ -24,19 +24,19 @@
                             </div>
                         </div>
                         <div class="header-button"><a href="/funding/funding-start">펀딩하기</a></div>
-                        <!-- <div class="icon-wrapper">
+                        &lt;!&ndash; <div class="icon-wrapper">
                             <svg class="like-icon" width="48" height="48" fill="none">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M23.9996 13.623L20.6051 10.5561C17.2106 7.48978 11.57 8.17753 8.48147 11.5785C4.60233 15.6667 4.60214 22.5859 8.70675 26.9121L24 41.8811L39.2923 26.9121C43.3969 22.5859 43.3971 15.6675 39.5176 11.5785C36.4291 8.17753 30.7888 7.48991 27.3942 10.5561L23.9996 13.623ZM37.0081 24.6701C39.9446 21.533 39.8523 16.5805 37.1962 13.781L37.1721 13.7556L37.1487 13.7298C35.0533 11.4225 31.4219 11.2305 29.5394 12.9306L23.9996 17.9356L18.4601 12.9308C16.5777 11.2306 12.9458 11.4224 10.8504 13.7298L10.8269 13.7557L10.8028 13.7811C8.14716 16.5799 8.05453 21.533 10.9909 24.6701L23.9999 37.4033L37.0081 24.6701Z" fill="black"></path>
                             </svg>
-                        </div> -->
-                        <!-- <div class="button-wrapper">
+                        </div> &ndash;&gt;
+                        &lt;!&ndash; <div class="button-wrapper">
                             <div class="icon-wrapper">
                                 <svg class="notification-icon" width="24" height="24" viewBox="0 0 24 24" fill="none">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M10.7501 3.5C10.6121 3.5 10.5001 3.61193 10.5001 3.75V4.16109C7.35495 4.84777 5.00013 7.64889 5.00013 11V14.6875L4.53246 18.7212C4.51524 18.8697 4.63131 19 4.78079 19H19.2195C19.369 19 19.485 18.8697 19.4678 18.7212L19.0001 14.6875V11C19.0001 7.64888 16.6453 4.84775 13.5001 4.16109V3.75C13.5001 3.61193 13.3882 3.5 13.2501 3.5H10.7501ZM6.29636 17.4L6.60013 14.7799V11C6.60013 8.01766 9.01779 5.6 12.0001 5.6C14.9825 5.6 17.4001 8.01766 17.4001 11V14.7799L17.7039 17.4H6.29636Z" fill="#191919"></path>
                                     <path d="M10.0001 20H14.5001C14.5001 20.8284 13.8285 21.5 13.0001 21.5H11.5001C10.6717 21.5 10.0001 20.8284 10.0001 20Z" fill="#191919"></path>
                                 </svg> 
                             </div>
-                        </div> -->
+                        </div> &ndash;&gt;
                         <div class="login-user-button-wrapper">
                             <div class="user-button-layout">
                                 <div style="margin:0; padding:0;" class="user-avatar">
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                         <div id="show">
-                            <!-- JS로 처리 -->
+                            &lt;!&ndash; JS로 처리 &ndash;&gt;
                         </div>
                     </div>
                 </div>
@@ -75,11 +75,11 @@
                         </div>
                     </div>
                     <div class="extended-category-section category-extend-select">
-                        <!-- <div class="extended-categeory-header">
+                        &lt;!&ndash; <div class="extended-categeory-header">
                             <svg class="x-button extended-categeory-header" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0446 10.5249L6.49306 5L5.02166 6.46433L10.5732 11.9892L5 17.5357L6.4714 19L12.0446 13.4536L17.5286 18.9112L19 17.4468L13.516 11.9892L18.9783 6.55317L17.5069 5.08884L12.0446 10.5249Z" fill="#0D0D0D"></path>
                             </svg>
-                        </div> -->
+                        </div> &ndash;&gt;
                         <div class="category-container">
                             <div class="extended-categeory-header">
                                 <svg class="x-button extended-categeory-header" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -129,12 +129,12 @@
                 </div>
             </div>
         </header>
-    </div>
+    </div>-->
 
 
     <!-- 로그아웃시 -->
-    <!-- <div class="full-screen">
-        <header class="header-layout">
+    <div class="full-screen">
+        <header id="main-header" th:fragment="mainHeader" class="header-layout">
             <div class="header-wrapper">
                 <div class="header-upper-layout">
                     <div class="logo-wrapper"></div>
@@ -160,7 +160,7 @@
                         </div>
                         <div id="show">
                             <!-- JS로 처리 -->
-                            <!-- <div class="my-user-wrapper">
+                            <!--<div class="my-user-wrapper">
                                 <div class="user-menu-list">
                                     <div class="menu-item">프로필</div>
                                     <div class="menu-item">응원권</div>
@@ -177,8 +177,7 @@
                                     <div class="menu-item-divider"></div>
                                     <div class="menu-item">로그아웃</div>
                                 </div>
-                            </div>
-                            <div class="user-dimmed-layout"></div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -251,7 +250,7 @@
                 </div>
             </div>
         </header>
-    </div> -->
+    </div>
     
     
 </body>
