--- a/src/main/resources/templates/join-login/email-join.html
+++ b/src/main/resources/templates/join-login/email-join.html
@@ -25,12 +25,12 @@
                 <div class="join-inner-wrap">
                     <h1 class="join-title">이메일로 가입하기</h1>
 
-                    <form action="" name="joinForm">
+                    <form th:action="@{/member/join}" method="post" name="joinForm">
                         <div class="input-div">
                             <div class="input-title">이름</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
-                                    <input type="text" class="input-write" placeholder="사용하실 이름을 입력해주세요">
+                                    <input name="memberName" type="text" class="input-write" placeholder="사용하실 이름을 입력해주세요">
                                 </span>
                             </div>
                             <div class="email-error">비워놓을 수 없습니다.</div>
@@ -39,7 +39,7 @@
                             <div class="input-title">이메일 주소</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
-                                    <input type="text" class="input-write" placeholder="이메일 주소를 입력해주세요">
+                                    <input type="text" name="memberEmail" class="input-write" placeholder="이메일 주소를 입력해주세요">
                                 </span>
                             </div>
                             <div class="email-error">비워놓을 수 없습니다.</div>
@@ -54,7 +54,7 @@
                             <div class="input-title">비밀번호</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
-                                    <input type="password" class="input-write" placeholder="비밀번호를 입력해주세요">
+                                    <input type="password" name="memberPassword" class="input-write" placeholder="비밀번호를 입력해주세요">
                                 </span>
                             </div>
                             <div class="email-error">비워놓을 수 없습니다.</div>
@@ -69,7 +69,7 @@
                             <div class="input-title">주소 (선택)</div>
                             <div class="input-include-div">
                                 <span class="input-include-span" style="padding: 0px 0px 0px 12px;">
-                                    <input type="text" class="input-write" id="address" placeholder="주소를 입력해주세요" readonly>
+                                    <input type="text" name="memberAddress" class="input-write" id="address" placeholder="주소를 입력해주세요" readonly>
                                     <button class="find-address" type="button" onclick="sample6_execDaumPostcode()">검색</button>
                                 </span>
                             </div>
@@ -78,7 +78,7 @@
                             <div class="input-title">나이 (선택)</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
-                                    <input type="text" class="input-write" placeholder="나이를 입력해주세요" maxlength="2">
+                                    <input type="text" name="memberAge" class="input-write" placeholder="나이를 입력해주세요" maxlength="2">
                                 </span>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                             <div class="input-include-div" style="margin: 0;">
                                 <label for="drop-span">
                                     <span class="input-include-span" id="drop-span" style="cursor: pointer;">
-                                        <input type="text" class="input-write" id="interest-volunteer" placeholder="관심봉사활동을 선택해주세요" readonly>
+                                        <input type="text" name="memberInterest" class="input-write" id="interest-volunteer" placeholder="관심봉사활동을 선택해주세요" readonly>
                                         <div>
                                             <svg height="20" width="20" style="padding-top: 8px;" viewBox="0 0 20 20" aria-hidden="true" focusable="false" class="css-8mmkcg">
                                                 <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"></path>
