로그인 회원가입 거의 다함

--- a/src/main/resources/templates/join-login/join-select.html
+++ b/src/main/resources/templates/join-login/join-select.html
@@ -52,7 +52,7 @@
                         <div class="join-wrap">
                             이미 계정이 있으신가요?
                             <span class="join-text">
-                                <a href="/user/login" class="join-page">로그인</a>
+                                <a href="/member/login" class="join-page">로그인</a>
                             </span>
                         </div>
                     </div>
@@ -65,7 +65,8 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
     $('.email-join').click(function() {
-        location.href = "/user/join"
+        console.log("이메일 로고 클릭");
+        location.href = "/member/join"
     })
 </script>
 </html>
