페이징 처리 완료

--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -41,7 +41,7 @@
                                     <div class="status-item-name">총 공지사항</div>
                                 </div>
                                 <div class="status-item-count">
-                                    <div th:text="${pageInfo.totalElements}">1</div>
+<!--                                    <div th:text="${pageInfo.totalElements}">1</div>-->
                                 </div>
                               </li>
                             <div class="clock">
@@ -133,12 +133,12 @@
                         <!-- default.css > pagenation -->
                         <div>
                             <div class="paging" style="text-align: center">
-                                <a th:if="${pageInfo.hasPrevious}" th:href="@{/admin/notice} + '?page=' + ${pageInfo.currentNumber}" class="changePage" style="color: black"><code><</code></a>
-                                <th:block th:each="page:${#numbers.sequence(pageInfo.startPage, pageInfo.endPage)}">
-                                    <a th:href="@{/admin/notice} + '?page=' + ${page}" th:if="${pageInfo.currentNumber + 1 != page}" class="changePage" style="color: black" th:text="${page}"></a>
-                                    <code id="currentPage" th:if="${pageInfo.currentNumber + 1 == page}" th:text="${page}">1</code>
+                                <a th:if="${pageDTO.prev}" th:href="@{/admin/notice} + '?page=' + ${pageDTO.startPage - 1}" class="changePage" style="color: black"><code><</code></a>
+                                <th:block th:each="page:${#numbers.sequence(pageDTO.startPage, pageDTO.endPage)}">
+                                    <a th:href="@{/admin/notice} + '?page=' + ${page}" th:if="${pageDTO.pageNum != page}" class="changePage" style="color: black" th:text="${page}"></a>
+                                    <code id="currentPage" th:if="${pageDTO.pageNum == page}" th:text="${page}">1</code>
                                 </th:block>
-                                <a th:if="${pageInfo.hasNext}" th:href="@{/admin/notice} + '?page=' + ${pageInfo.currentNumber + 2}" class="changePage" style="color: black"><code>></code></a>
+                                <a th:if="${pageDTO.next}" th:href="@{/admin/notice} + '?page=' + ${pageDTO.endPage + 1}" class="changePage" style="color: black"><code>></code></a>
                             </div>
                             <form name="pageForm">
                                 <input type="hidden">
@@ -206,7 +206,7 @@
     </section>
 </body>
 <script th:inline="javascript">
-    let notices = [[${notices}]];
+    let notices = [[${noticeDTOS}]];
 </script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/admin/notice.js"></script>
