--- a/src/main/resources/templates/community/review-board.html
+++ b/src/main/resources/templates/community/review-board.html
@@ -31,8 +31,10 @@
 
         <div class="header">
             <div class="header-container">
+                <a href="/community/free-board">
+                    <span class="header-title2">자유</span>
+                </a>
                 <span class="header-title1">활동후기</span>
-                <span class="header-title2">자유</span>
             </div>
         </div>
         <main class="review-main">
@@ -52,40 +54,42 @@
                 </div>
                 <div>
                     <div class="items-buttons">
-                        <a class="button">작성하기</a>
+                        <a class="button" href="/community/review-create">작성하기</a>
                     </div>
                 </div>
             </div>
             <div>
                 <ul class="contant">
                     <!--  -->
-                    <li class="contant-list-container" style="margin-top: 10px">
-                        <div>
-                            <button class="contant-btn">
-                                <div class="contant-title-container">
-                                    <div class="contant-title-wrapper">
-                                        <h2 class="contant-title">쓰레기 줍기 봉사 활동은 어때요?</h2>
-                                        <p class="contant-contant">안녕하세요. 이번에 서울 산책로 쓰레기 봉사에 참여하려고 합니다. 쓰레기가 길가에 많이 떨어져 있어 산책하면서 봉사 활동을 할 수 있다고 하여 참가 해보려고 합니다. 혹시 참여해보신분 계신다면 분위기나 기타 준비물이 어떤것들이 필요한지 알려주세요</p>
+                    <a href="/community/review-detail">
+                        <li class="contant-list-container" style="margin-top: 10px">
+                            <div>
+                                <button class="contant-btn">
+                                    <div class="contant-title-container">
+                                        <div class="contant-title-wrapper">
+                                            <h2 class="contant-title">쓰레기 줍기 봉사 활동은 어때요?</h2>
+                                            <p class="contant-contant">안녕하세요. 이번에 서울 산책로 쓰레기 봉사에 참여하려고 합니다. 쓰레기가 길가에 많이 떨어져 있어 산책하면서 봉사 활동을 할 수 있다고 하여 참가 해보려고 합니다. 혹시 참여해보신분 계신다면 분위기나 기타 준비물이 어떤것들이 필요한지 알려주세요</p>
+                                        </div>
+                                        <div class="contant-img">
+                                            <span class="contant-img-span">
+                                                <img class="contant-image" src="https://steadio.imgix.net/creator-posts/079d1a28-343d-4f6a-8889-e9328964aafd/creatorPostImage/269f44f6-9d34-47bb-83a2-7d99d86a5280.jpg?auto=format%2Ccompress&fit=crop&h=420&lossless=true&w=680">
+                                            </span>
+                                        </div>
                                     </div>
-                                    <div class="contant-img">
-                                        <span class="contant-img-span">
-                                            <img class="contant-image" src="https://steadio.imgix.net/creator-posts/079d1a28-343d-4f6a-8889-e9328964aafd/creatorPostImage/269f44f6-9d34-47bb-83a2-7d99d86a5280.jpg?auto=format%2Ccompress&fit=crop&h=420&lossless=true&w=680">
-                                        </span>
+                                    <div class="contant-user">
+                                        <div class="user-photo"></div>
+                                        <div class="user-profile">
+                                            <span class="user-name">봉사하는 봉린이</span>
+                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="contant-user-span"><circle cx="12" cy="12" r="4"></circle></svg>
+                                            <span class="user-time">3시간 전</span>
+                                            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="contant-user-span"><circle cx="12" cy="12" r="4"></circle></svg>
+                                            <span class="user-see">댓글수 3</span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="contant-user">
-                                    <div class="user-photo"></div>
-                                    <div class="user-profile">
-                                        <span class="user-name">봉사하는 봉린이</span>
-                                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="contant-user-span"><circle cx="12" cy="12" r="4"></circle></svg>
-                                        <span class="user-time">3시간 전</span>
-                                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="contant-user-span"><circle cx="12" cy="12" r="4"></circle></svg>
-                                        <span class="user-see">조회수 3</span>
-                                    </div>
-                                </div>
-                            </button>
-                        </div>
-                    </li>
+                                </button>
+                            </div>
+                        </li>
+                    </a>
                     <!--  -->
                     <li class="contant-list-container">
                         <div>
